--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
+*-debug.log
+*-error.log
+/.nyc_output
+/dist
+/lib
+/package-lock.json
+/tmp
+/yarn.lock
 node_modules
-build
-package-lock.json
-search.json
+oclif.manifest.json
