--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "prepack": "yarn build && oclif manifest && oclif readme",
     "test": "mocha --forbid-only \"test/**/*.test.ts\"",
     "version": "oclif readme && git add README.md",
-    "local": "npm run build && clear && ./bin/run query"
+    "local": "npm run build && clear && ./bin/run query tagesschau"
   },
   "engines": {
     "node": ">=12.0.0"
