--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "@oclif/core": "^1",
     "@oclif/plugin-help": "^5",
     "@oclif/plugin-plugins": "^2.1.0",
+    "@types/inquirer": "^8.2.1",
     "axios": "^0.27.2",
     "chalk": "^4.1.2",
-    "moment": "^2.29.3",
-    "signale": "^1.4.0"
+    "moment": "^2.29.3"
   },
   "devDependencies": {
     "@oclif/test": "^2",
