--- a/package.json
+++ b/package.json
@@ -17,30 +17,31 @@
     "/oclif.manifest.json"
   ],
   "dependencies": {
-    "@oclif/core": "^1",
-    "@oclif/plugin-help": "^6",
-    "@oclif/plugin-plugins": "^2.4.7",
+    "@oclif/core": "^4.5.2",
+    "@oclif/plugin-help": "^6.2.31",
+    "@oclif/plugin-plugins": "^5.4.45",
     "@types/inquirer": "^9.0.7",
-    "axios": "^0.27.2",
-    "chalk": "^4.1.2",
+    "inquirer": "^9.3.7",
+    "axios": "^1.11.0",
+    "chalk": "^5.4.1",
+    "cli-table3": "^0.6.5",
     "moment": "^2.30.1"
   },
   "devDependencies": {
-    "@oclif/test": "^3",
-    "@types/chai": "^4",
-    "@types/mocha": "^10.0.6",
-    "@types/node": "^16.9.4",
-    "chai": "^5",
-    "eslint": "^7.32.0",
-    "eslint-config-oclif": "^5",
-    "eslint-config-oclif-typescript": "^1.0.3",
-    "globby": "^14",
-    "mocha": "^9",
-    "oclif": "^4",
+    "@oclif/test": "^4.1.13",
+    "@types/chai": "^5.0.2",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^24.1.0",
+    "chai": "^5.1.2",
+    "eslint": "^9.31.0",
+    "eslint-config-oclif": "^6.0.87",
+    "globby": "^14.0.2",
+    "mocha": "^11.7.1",
+    "oclif": "^4.22.1",
     "shx": "^0.3.4",
     "ts-node": "^10.9.2",
-    "tslib": "^2.6.2",
-    "typescript": "^5.4.5"
+    "tslib": "^2.8.1",
+    "typescript": "^5.8.3"
   },
   "oclif": {
     "bin": "media",
@@ -54,7 +55,7 @@
   },
   "scripts": {
     "build": "shx rm -rf dist && tsc -b",
-    "lint": "eslint . --ext .ts --config .eslintrc",
+    "lint": "eslint . --ext .ts",
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "yarn lint",
     "prepack": "yarn build && oclif manifest && oclif readme",
@@ -63,7 +64,7 @@
     "local": "npm run build && clear && ./bin/run query tagesschau"
   },
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=18.0.0"
   },
   "bugs": "https://github.com/maxboettinger/mediathek-clik/issues",
   "keywords": [
